# pydantic-parsed-env

./: .gitignore  README.md  flake.nix  pyproject.toml  renovate.json
.github/: apply-rulesets.sh
.github/rulesets/: branch-main.json
.github/workflows/: ci.yml  release.yml
src/pydantic_parsed_env/: __init__.py  _api.py  _parsers.py
src/pydantic_simple_env/: __init__.py  _api.py  _parsers.py
tests/: test_parsers.py  test_properties.py  test_settings.py
